--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Anton', sans-serif;
+
 }
 
 .navega{
-    background-color: ;
+    background-color: #F56507;
+    width: 100%;
+    height: 70px;
+    color: white;
+    border-bottom: solid 2px #CA4F00;
+    box-shadow: 2px 13px 8px rgba(0, 0, 0, 0.2)  ; 
+	-webkit-box-shadow: 2px 13px 8px rgba(0, 0, 0, 0.2)  ; 
+	-moz-box-shadow: 2px 13px 8px rgba(0, 0, 0, 0.2)  ;
 }
+
+.nav{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    line-height: 70px;
+    margin: 5px;
+
+}
+
+
+.nav a{
+    color: white;
+    font-weight: 400;
+    font-size: 24px;
+    cursor: hand;
+}
+
