--- a/style.css
+++ b/style.css
@@ -48,4 +48,65 @@
 
 .mi_persona{
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imgen img{
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
+    margin: 23px;
+    padding: 23px;
+}
+
+.imgen img:hover{opacity: 0.8; cursor: pointer;}
+
+.informacion{
+    font-size: 25px;
+    text-align: center;
+    padding: 12px;
+    margin: 12px;
+    top: -40px;
+}
+
+.suscribete{
+    background-color: #F56507;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.suscribete form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.suscribete label{
+
+    color: white;
+    font-size: 34px;
+
+}
+
+.suscribete input{
+    width: 400px;
+    height: 50px;
+    border: none;
+    border-radius: 45px;
+    padding: 10px;
+}
+
+.suscribete button{
+
+    background-color: red;
+    border: none;
+    color: white;
+    padding: 9px;
+    font-size: 23px;
+
 }
