--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Anton', sans-serif;
+    list-style: none;
 
 }
 
+/*NAV*/
 .navega{
     background-color: #F56507;
     width: 100%;
@@ -38,6 +40,7 @@
     cursor: hand;
 }
 
+/*IMG PRINCIPAL*/
 .contenido{
     background-image: url("img/programador.webp");
     height: 70vh;
@@ -45,31 +48,92 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+/*INFO MIA*/
 
 .mi_persona{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+.mi_persona img{
+
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    margin: 12px;
+    padding: 9px;
+    display: flex;
+}
+
+.soy{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 900px;
+    height: 500px;
+}
+
+.soy p{
+
+    font-size: 30px;
+    margin: 12px;
+    padding: 7px;
+
+
+}
+
+
+
+/*LENGUAJES*/
+
+.lenguajes{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+}
+
+.center{
+
+    
+    width: 600px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 
-.imgen img{
-    width: 400px;
-    height: 400px;
-    border-radius: 200px;
-    margin: 23px;
-    padding: 23px;
+.mas_info{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
+.mas_info img{
+    
+    width: 110px;
+    height: 110px;
+}
 
+.mas_info p{
 
-.informacion{
-    font-size: 25px;
+    font-size: 16px;
     text-align: center;
     padding: 12px;
     margin: 12px;
-    top: -40px;
+
 }
+
 
 .suscribete{
     background-color: #F56507;
@@ -95,7 +159,7 @@
 }
 
 .suscribete input{
-    width: 400px;
+    width: 300px;
     height: 50px;
     border: none;
     border-radius: 45px;
@@ -117,7 +181,8 @@
 
 .suscribete button:hover{
 
-background-color: rgb(138, 1, 1); 
-border-bottom: solid 1px rgb(255, 17, 17);   
+    opacity: 0.1;
+    cursor: hand;
+    cursor: pointer;
 
 }
